# PersonWeb

./: .env.example  .gitignore  .stylelintrc.js  AGENTS.md  ARCHITECTURE.md  ARTICLES_TROUBLESHOOTING.md  AUTHORS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_QUALITY_REPORT.md  CONFIG_SUMMARY.md  CONTRIBUTING.md  Claude Code 执行任务.md  FEATURE_DEVELOPMENT_LOG.md  FEATURE_STATUS.md  FEATURE_SUMMARY.md  GitHub-Secrets-Setup-Guide.md  IMPROVEMENT_PROGRESS.md  LICENSE  MARKDOWN_EDITOR_UPGRADE.md  MIGRATION_TO_DATABASE.md  OPENSOURCE_CHECKLIST.md  OPENSOURCE_SETUP.md  OPEN_SOURCE.md  OPTIMIZATION_PLAN.md  PersonWeb.sln  Program.cs  QUICK_START.md  README.md  README_MODULES.md  README_NAIVE_UI.md  ROADMAP_MODULE_SYSTEM.md  SECURITY.md  START_BACKEND.md  STYLE_REMINDER.md  TOOLS_API_FIX.md  Web.sln  app-manifest-stub.js  app.vue  (+20 more)
python-ai/: README.md  pyproject.toml
python-ai/app/: __init__.py  main.py
python-ai/app/api/: deps.py  router.py
python-ai/app/api/v1/: __init__.py  thought.py  website_chat.py
python-ai/app/core/: __init__.py  config.py  errors.py  logging.py  security.py
python-ai/app/prompts/: thought_comment_v1.txt
python-ai/app/prompts/website_chat/: system_v1.txt  user_v1.txt
python-ai/app/schemas/: __init__.py  common.py  website_chat.py
python-ai/app/services/: __init__.py
python-ai/app/services/llm/: __init__.py  client.py  models.py  retry.py
python-ai/app/services/observability/: __init__.py  traces.py
python-ai/app/services/prompt/: __init__.py  guardrails.py  loader.py  renderer.py
python-ai/app/tests/: test_website_chat.py
(+1231 files in other folders)
